health-and-wellbeing-file-storage/YAMLs/002_mongo-stateful-healthw.yaml
# Copyright 2022 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-health-wellbeing
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    matchLabels:
      role: mongo-health-wellbeing
  serviceName: "mongo-health-wellbeing"
  replicas: 3
  template:
    metadata:
      labels:
        name: mongo-health-wellbeing
        role: mongo-health-wellbeing
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccount: mongo-account
      containers:
      - name: mongo-db
        image: mongo:5.0.8
        command:
        - mongod
        - "--replSet"
        - rs0
        - "--bind_ip"
        - 0.0.0.0
        - "--enableFreeMonitoring"
        - "on"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-health-wellbeing-persistent-storage
          mountPath: /data/db
      - name: mongo-sidecar
        image: cvallance/mongo-k8s-sidecar:latest
  volumeClaimTemplates:
    - metadata:
        name: mongo-health-wellbeing-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
